# squeal

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md
cmake/Modules/: FindCheck.cmake  FindLibCheck.cmake  FindLibevent2.cmake
include/: lme_global.h  lme_string.h  lme_types.h  squeal.h  squeal_backend.h  squeal_config.h  squeal_function.h  squeal_global.h  squeal_hashtable.h  squeal_log.h  squeal_result.h  squeal_stats.h  squeal_string.h  squeal_sval.h  squeal_threads.h  squeal_types.h
libdrizzle/: CMakeLists.txt  common.h  config.h  conn.c  constants.h  drizzle.c  drizzle.h  handshake.c  query.c  query.h  result.c  row.c  sha1.c  visibility.h
scripts/: squeal.ini.example
src/: libmyevent.c  lme_string.c  squeal.c  squeal.y  squeal_backend.c  squeal_compile.c  squeal_compile.h  squeal_config.c  squeal_function.c  squeal_hashtable.c  squeal_log.c  squeal_result.c  squeal_sql.l  squeal_sql.y  squeal_stats.c  squeal_string.c  squeal_threads.c  squeald.c  squeald.h
src/sql/: squeal.l  squeal.y  squeal_ast.c  squeal_ast.h  squeal_compile.c  squeal_compile.h
tests/: CMakeLists.txt  runner.c  test.ini  test_config.c  test_function.c  test_hashtable.c  test_result.c  test_squeal.c  test_string.c
